--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
