--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.5.4",
+    "@mantine/form": "^5.5.4",
     "@mantine/hooks": "^5.5.4",
+    "@mantine/notifications": "^5.5.4",
     "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
