--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.formatOnSaveMode": "modifications",
   "files.eol": "\n",
   "files.insertFinalNewline": true,
-  "cSpell.words": ["tabler", "toastify"],
+  "cSpell.words": ["tabler", "toastify", "Todos"],
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   }
