--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "@mantine/core": "^5.5.4",
     "@mantine/form": "^5.5.4",
     "@mantine/hooks": "^5.5.4",
-    "@mantine/notifications": "^5.5.4",
     "axios": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-query": "^3.39.2",
     "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2",
-    "react-virtualized": "^9.22.3"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.38",
